recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:16: error: illegal start of simple expression
  droite(angle);
^